// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/file_preview_modal/file_preview_modal_footer/FilePreviewModalFooter should match snapshot the desktop view 1`] = `
<div
  className="file-preview-modal-footer"
>
  <Memo(FilePreviewModalInfo)
    filename="img.png"
    post={Object {}}
    showFileName={false}
  />
  <Memo(FilePreviewModalMainActions)
    canDownloadFiles={true}
    enablePublicLink={false}
    fileIndex={1}
    fileInfo={
      Object {
        "clientId": "client_id",
        "create_at": 1,
        "delete_at": 1,
        "extension": "jpg",
        "has_preview_image": true,
        "height": 200,
        "id": "file_info_id",
        "mime_type": "mime_type",
        "name": "name",
        "size": 1,
        "update_at": 1,
        "user_id": "user_id",
        "width": 350,
      }
    }
    fileURL="https://example.com/img.png"
    filename="img.png"
    handleModalClose={[MockFunction]}
    handleNext={[MockFunction]}
    handlePrev={[MockFunction]}
    isExternalFile={false}
    isMobile={false}
    onGetPublicLink={[MockFunction]}
    showClose={false}
    showOnlyClose={false}
    showPublicLink={false}
    totalFiles={3}
    usedInside="Footer"
  />
</div>
`;

exports[`components/file_preview_modal/file_preview_modal_footer/FilePreviewModalFooter should match snapshot the mobile view 1`] = `
<div
  className="file-preview-modal-footer"
>
  <Memo(FilePreviewModalInfo)
    filename="img.png"
    post={Object {}}
    showFileName={false}
  />
  <Memo(FilePreviewModalMainActions)
    canDownloadFiles={true}
    enablePublicLink={false}
    fileIndex={1}
    fileInfo={
      Object {
        "clientId": "client_id",
        "create_at": 1,
        "delete_at": 1,
        "extension": "jpg",
        "has_preview_image": true,
        "height": 200,
        "id": "file_info_id",
        "mime_type": "mime_type",
        "name": "name",
        "size": 1,
        "update_at": 1,
        "user_id": "user_id",
        "width": 350,
      }
    }
    fileURL="https://example.com/img.png"
    filename="img.png"
    handleModalClose={[MockFunction]}
    handleNext={[MockFunction]}
    handlePrev={[MockFunction]}
    isExternalFile={false}
    isMobile={true}
    onGetPublicLink={[MockFunction]}
    showClose={false}
    showOnlyClose={false}
    showPublicLink={false}
    totalFiles={3}
    usedInside="Footer"
  />
</div>
`;
